feat(api): get detail recycle location
